@@ -20,9 +20,15 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 '''
 
-from flask import Flask, send_from_directory, request
+import signal
+import sys
+import threading
+import time
+from flask import Flask, render_template, send_from_directory, request
+import schedule
 from Security_Check import get_cf_ips, download_cf_ips
 from SignConfig import SignMobileconfig
+from Logger import logger, Logger_Transfer
 import ipaddress
 import json
 import os
@@ -43,7 +49,8 @@ def limit_remote_addr():
     for cf_ip in cf_ips:
         if ipaddress.IPv4Address(request.remote_addr) in ipaddress.ip_network(cf_ip):
             return None
-
+    log_message = '403 Error: %s %s %s' % (request.remote_addr, request.method, request.url)
+    logger.error(log_message)
     return "Forbidden", 403
 
 def allowed_file(filename):
@@ -59,12 +66,44 @@ def download(filename):
             return send_from_directory(DOWNLOAD_DIRECTORY, filename, as_attachment=True)
         # 若檔案不存在，則回傳錯誤訊息
         else:
+            logger.info("Allowed file but not found")
             return render_template('404.html'), 404
     # 若檔案類型不合法，則回傳錯誤訊息
     else:
+        logger.info("Not allowed file")
         return render_template('404.html'), 404
 
+def Logger_schedule(stop_event):
+    schedule.every().day.at("23:00").do(Logger_Transfer, pre_close=False)
+    while not stop_event.is_set():
+        schedule.run_pending()
+        time.sleep(1)
+
+def signal_handler(sig, frame):
+    logger.info('Received signal : ' + str(sig))
+    stop_event.set()
+    Logger_Transfer()
+    sys.exit(0)
+
 if __name__ == '__main__':
+
+    # 建立 stop_event
+    stop_event = threading.Event()
+
+    signal.signal(signal.SIGINT, signal_handler)
+    signal.signal(signal.SIGTERM, signal_handler)
+
     SignMobileconfig()
+    logger.info("Finish SignMobileconfig")
+
+    # 建立 thread
+    logger_thread = threading.Thread(target=Logger_schedule, args=(stop_event,))
+
+    # 啟動 thread
+    logger_thread.start()
+
     download_cf_ips()
     app.run(host='0.0.0.0', port=8443, ssl_context=(setting['CERT'], setting['PRIVKEY']), threaded=True)
+
+    # 等待 thread 結束
+    logger_thread.join()
