@@ -1,5 +1,9 @@
 # 歷史更新 History Update
 
+* 20230508 Update
+  * 加入 DownloadServer Log
+  * 調整 註解
+
 * 20230507 Update
   * 加入 LineBot 積分Rank
   * 更新 個人不想看與網友匯報廣告或網站
